src/test/ui/consts/const-eval/erroneous-const2.stderr
error[E0080]: evaluation of `PrintName::<i32>::VOID` failed
  --> $DIR/erroneous-const2.rs:6:22
   |
LL |     const VOID: () = [()][2];
   |                      ^^^^^^^ index out of bounds: the length is 1 but the index is 2

error[E0080]: could not evaluate static initializer
  --> $DIR/erroneous-const2.rs:13:17
   |
LL |         let _ = PrintName::<i32>::VOID;
   |                 ^^^^^^^^^^^^^^^^^^^^^^ referenced constant has errors

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
